[package]
name = "myox_cryptocurrency"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <k.matush@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.2"
chrono = "0.4.12"
proptest = "0.10.0"
rand = "0.7.3"
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3.3"
serde = {version = "1.0.114", features = ["derive"]}
hex = "0.4.2"
redis = "0.16.0"
futures-util = "0.3.5"
futures = "0.3.5"
serde_json = "1.0.56"
secp256k1 = {version = "0.17.2", features = ["rand-std"]}
uuid = {version = "0.8.1", features = ["v4"]}

[package.metadata.commands]
run-dev = "systemfd --no-pid -s http::3000 -- cargo watch -x run"
